// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spin 2. render test renders correctly 1`] = `
<div
  class="kd-spin-children-wrapper"
>
  <div
    class="kd-spin kd-spin-page kd-spin-indicator-container kd-spin-has-children"
  >
    <div
      class="kd-spin-dot-spin"
    >
      <i
        class="kd-spin-dot-item"
      />
      <i
        class="kd-spin-dot-item"
      />
      <i
        class="kd-spin-dot-item"
      />
      <i
        class="kd-spin-dot-item"
      />
    </div>
  </div>
  <div
    class="kd-spin-children-container"
  >
    Text
  </div>
</div>
`;

exports[`Spin 2. render test renders correctly 2`] = `
<div
  class="kd-spin-children-wrapper"
>
  <div
    class="kd-spin kd-spin-page kd-spin-indicator-container kd-spin-has-children"
  >
    <div
      class="kd-spin-dot-spin"
    >
      <i
        class="kd-spin-dot-item"
      />
      <i
        class="kd-spin-dot-item"
      />
      <i
        class="kd-spin-dot-item"
      />
      <i
        class="kd-spin-dot-item"
      />
    </div>
  </div>
  <div
    class="kd-spin-children-container"
  >
    Text
  </div>
</div>
`;

exports[`Spin 2. render test renders correctly 3`] = `
<div
  class="kd-spin-children-wrapper"
>
  <div
    class="kd-spin kd-spin-container kd-spin-indicator-container kd-spin-has-children"
  >
    <div
      class="kd-spin-dot-spin"
    >
      <i
        class="kd-spin-dot-item"
      />
      <i
        class="kd-spin-dot-item"
      />
      <i
        class="kd-spin-dot-item"
      />
      <i
        class="kd-spin-dot-item"
      />
    </div>
  </div>
  <div
    class="kd-spin-children-container"
  >
    Text
  </div>
</div>
`;

exports[`Spin 2. render test renders correctly 4`] = `
<div
  class="kd-spin-children-wrapper"
>
  <div
    class="kd-spin kd-spin-component kd-spin-indicator-container kd-spin-has-children"
  >
    <div
      class="kd-spin-dot-spin"
    >
      <i
        class="kd-spin-dot-item"
      />
    </div>
  </div>
  <div
    class="kd-spin-children-container"
  >
    Text
  </div>
</div>
`;

exports[`Spin 2. render test should render custom indicator 1`] = `
<div
  class="kd-spin kd-spin-page kd-spin-indicator-container"
>
  <div
    class="custom-indicator"
  />
</div>
`;

exports[`Spin 4. render null or undefined without errors render null or undefined spin without errors 1`] = `
<Spin>
  <div
    className="kd-spin-children-wrapper"
  >
    <div
      className="kd-spin kd-spin-page kd-spin-indicator-container kd-spin-has-children"
      style={null}
    >
      <div
        className="kd-spin-dot-spin"
      >
        <i
          className="kd-spin-dot-item"
        />
        <i
          className="kd-spin-dot-item"
        />
        <i
          className="kd-spin-dot-item"
        />
        <i
          className="kd-spin-dot-item"
        />
      </div>
    </div>
    <div
      className="kd-spin-children-container"
    />
  </div>
</Spin>
`;

exports[`Spin 4. render null or undefined without errors render null or undefined spin without errors 2`] = `
<Spin
  spinning={false}
/>
`;
